[gd_scene load_steps=7 format=3 uid="uid://cyijpy52icdw6"]

[ext_resource type="Script" path="res://Minigames/GuineaPig/Game1/GuineaPigChase.gd" id="1_1as7c"]
[ext_resource type="Script" path="res://Minigames/GuineaPig/Game1/spawner.gd" id="2_643co"]
[ext_resource type="PackedScene" uid="uid://u7p7jmdsqivh" path="res://Minigames/GuineaPig/Game1/guinea_pig.tscn" id="3_irvbw"]
[ext_resource type="PackedScene" uid="uid://d2a3naufwx5tv" path="res://Minigames/GuineaPig/Game1/dog.tscn" id="4_kpweq"]
[ext_resource type="PackedScene" uid="uid://bkwosjopbsjg1" path="res://Minigames/GuineaPig/Game1/player.tscn" id="5_i2jty"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b0458"]
size = Vector2(258, 769)

[node name="GuineaPigChase" type="Node2D"]
script = ExtResource("1_1as7c")

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("2_643co")
guinea_pig_tscn = ExtResource("3_irvbw")
dog_tscn = ExtResource("4_kpweq")

[node name="TimeDifference" type="Timer" parent="Spawner"]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1207, -47)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-119, 374.5)
shape = SubResource("RectangleShape2D_b0458")

[node name="Player" parent="." instance=ExtResource("5_i2jty")]
position = Vector2(544, 144)

[connection signal="timeout" from="Spawner/TimeDifference" to="Spawner" method="_on_time_difference_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Area2D" to="Spawner" method="_on_area_2d_area_entered"]
